--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
+    "react-scroll-to-bottom": "^4.0.0",
     "styled-components": "^5.2.0"
   },
   "scripts": {
